--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
-name = pika-stubs
-version = 0.1.3
+name = pika-stubs-bc
+version = 0.1.4
 license = MIT
 author = Chi-En Wu
 author_email = jason.wu@hahow.in
 description = PEP-484 stubs for Pika
 long_description = file:README.md
 long_description_content_type = text/markdown
-url = https://github.com/hahow/pika-stubs
+url = https://github.com/caian-org/pika-stubs
 classifiers =
     Development Status :: 1 - Planning
     Intended Audience :: Developers
@@ -18,9 +18,9 @@ classifiers =
     Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
-packages = pika-stubs
+packages = pika-stubs-bc
 include_package_data = True
-python_requires = >=3.8
+python_requires = >=3.6
 install_requires =
 
 [options.extras_require]
