--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -4,25 +4,18 @@ on: [push, pull_request]
 
 jobs:
   check:
-
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        py-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
+      - name: Set up Python ${{ matrix.py-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.py-version }}
 
     - uses: actions/checkout@v2
-
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
-
-    - name: Cache dependencies
-      uses: actions/cache@v1
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('setup.cfg') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
 
     - name: Perform checks
       run: |
