fix: revert package name and configs

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = pika-stubs-bc
-version = 0.1.4
+name = pika-stubs
+version = 0.1.3
 license = MIT
 author = Chi-En Wu
 author_email = jason.wu@hahow.in
@@ -18,7 +18,7 @@ classifiers =
     Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
-packages = pika-stubs-bc
+packages = pika-stubs
 include_package_data = True
 python_requires = >=3.6
 install_requires =
